BUGFIX: Core  | Less flipping of downloads from queued <--> downloading during the time a FP seed is forced active [TuxPaper]
BUGFIX: Core  | Fix memory leak causing slow, but eventual OOM and slow down of Azureus [Parg]
BUGFIX: Core  | OSX: Handle volume not mounted on startup by erroring instead of creating a directory in /Volumes [TuxPaper]
BUGFIX: UI    | Fix (some) painting issues in pieces+files view [TuxPaper]
BUGFIX: UI    | Fix to allow negative values for Multi-monitor window positions [TuxPaper]



2006.08.21 | Azureus 2.5.0.0

FEATURE: Core | Reduced CPU usage, especially in some unusual conditions [MjrTom]
FEATURE: Core | Explicit local subnet and peer injection option for Lan Peer Finder [Parg]
FEATURE: Core | Auto upload speed [Parg]
FEATURE: Core | DND completion handled better [Parg,TuxPaper]
FEATURE: Core | Added option for per-torrent max upload speed when upload busy [Parg]
FEATURE: Core | Ranges allowed for port listing to ignore peers from. [TuxPaper]
FEATURE: Core | Added option to move completed download on removal [amc1]
FEATURE: Core | Signed updates for increased security [Parg]
FEATURE: Core | UDP fallback on connection fail [Parg]
FEATURE: Core | Support for initial crypto tracker spec [Parg]
FEATURE: Core | Faster queued torrent startup [Parg]
FEATURE: Core | Option to disable tracker support for full-scrape [Parg]
FEATURE: Core | Added ability to rename the directory save name for a multi-file torrent [amc1]

FEATURE: UI   | File pieces shown in files view [Parg]
FEATURE: UI   | Ability to best guess folder you want to save torrent data to based on existing torrents [TuxPaper]
FEATURE: UI   | Filter for Config Options [TuxPaper]
FEATURE: UI   | "Help -> Generate Debug Info" to help us solve bugs [TuxPaper]
FEATURE: UI   | Ability to customise the speed intervals for download / upload speed menus [amc1]
FEATURE: UI   | Ability to rename the displayed title of a download [amc1]